crates/reze_compiler/tests/snapshots/snapshots__link_static.snap
---
source: crates/reze_compiler/tests/snapshots.rs
assertion_line: 207
expression: "const a = <nav><a href=\"/x\" class=\"n\">X</a><a href={\"/y\"}>Y</a></nav>;"
---
import { template as _$template, child as _$child, next as _$next } from "reze-js";
import { link as _$link } from "@rezejs/router";
const a = (() => {
  var _el$ = _$template("<nav><a href=/x class=n>X</a><a href=/y>Y"),
    _el$2 = _$child(_el$),
    _el$3 = _$next(_el$2);
  _$link(_el$2);
  _$link(_el$3);
  return _el$;
})();
