crates/reze_compiler/tests/snapshots/snapshots__link_svg.snap
---
source: crates/reze_compiler/tests/snapshots.rs
assertion_line: 207
expression: "const a = <svg><a href=\"/x\"><text>x</text></a></svg>;"
---
import { template as _$template } from "reze-js";
import { link as _$link } from "@rezejs/router";
const a = (() => {
  var _el$ = _$template("<svg><a href=/x><text>x"),
    _el$2 = _el$.firstChild;
  _$link(_el$2);
  return _el$;
})();
