crates/reze_compiler/tests/snapshots/snapshots__native_spread.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <div {...attrs} class=\"x\" ref={el}>{kids()}</div>;"
---
import { template as _$template, use as _$use, spread as _$spread, mergeProps as _$mergeProps, insert as _$insert } from "reze-js";
const a = (() => {
  var _el$ = _$template("<div>");
  typeof el === "function" ? _$use(el, _el$) : el = _el$;
  _$spread(_el$, _$mergeProps(attrs, { class: "x" }), false, true);
  _$insert(_el$, kids);
  return _el$;
})();
