crates/reze_compiler/tests/snapshots/snapshots__portal.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { Portal, signal } from \"reze-js\";\nconst [target, setTarget] = signal(document.body);\nsetTarget(document.head);\nconst a = <Portal><Dialog /></Portal>;\nconst b = <div><Portal mount={target()}><p>y</p>{z()}</Portal></div>;\nconst c = <Portal mount={document.getElementById(\"modal\")}>{() => <i />}</Portal>;"
---
import { Portal, signal } from "reze-js";
import { portal as _$portal, createComponent as _$createComponent, template as _$template, insert as _$insert } from "reze-js";
const [target, setTarget] = signal(document.body);
setTarget(document.head);
const a = _$portal(() => _$createComponent(Dialog, {}));
const b = (() => {
  var _el$ = _$template("<div>");
  _$insert(_el$, _$portal(() => [_$template("<p>y"), z], target));
  return _el$;
})();
const c = _$portal(() => _$template("<i>"), () => document.getElementById("modal"));
