crates/reze_compiler/tests/snapshots/snapshots__props_default.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const Button = ({ label = \"Save\", size = 2, disabled = false, icon = undefined }) => (\n  <button disabled={disabled} class={size}>{icon}{label}</button>\n);"
---
import { template as _$template, append as _$append, renderEffect as _$renderEffect, setAttribute as _$setAttribute, className as _$className } from "reze-js";
const Button = (_props$) => {
  var _el$ = _$template("<button>"),
    _p$,
    _p$2;
  _$append(_el$, () => _props$.icon);
  _$append(_el$, () => (_props$.label === undefined ? "Save" : _props$.label));
  _$renderEffect(() => {
    var _v$ = (_props$.disabled === undefined ? false : _props$.disabled),
      _v$2 = (_props$.size === undefined ? 2 : _props$.size);
    _v$ !== _p$ && (_$setAttribute(_el$, "disabled", _p$ = _v$));
    _v$2 !== _p$2 && (_$className(_el$, _p$2 = _v$2));
  });
  return _el$;
};
// info
[PROPS_REWRITTEN] `Button` destructures its props, so the pattern became one props object and each destructured name a lazy read of it.
  in <Button>
  at case.tsx:1:17
> 1 | const Button = ({ label = "Save", size = 2, disabled = false, icon = undefined }) => (
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  2 |   <button disabled={disabled} class={size}>{icon}{label}</button>
